src/k8s/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: todos
  name: todo-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /todo6
          pathType: Prefix
          backend:
            service:
              name: todo6-service
              port: 
                number: 8080
        - path: /todo7
          pathType: Prefix
          backend:
            service:
              name: todo7-service
              port: 
                number: 8080
        - path: /todo8
          pathType: Prefix
          backend:
            service:
              name: todo8-service
              port: 
                number: 8080
